--- a/stuff/src/main.styl
+++ b/stuff/src/main.styl
@@ -1,3 +1,9 @@
+$fontcolor = #222
+
+body 
+  background-image url("/images/bg-stripes.png")
+  font-family Helvetica Neue, Helvetica, sans-serif
+
 h1 
   text-align center
   font-size 40px
@@ -8,8 +14,10 @@ h1
 
 .box 
   $gutterWidth = 10px;
-  background-color #121
-  color #aba
+  background-color #121823
+  background-color #fff
+  color $fontcolor
+  position relative
   //border 1px solid black
     
   display inline-block
@@ -25,8 +33,36 @@ h1
 .box__content 
   text-align justify
   padding 1.5em 1em
+.box__content__tags
+  margin-top 1em
+  font-size 0.8em
+  color lighten($fontcolor, 30%)
+.box__figure
+  margin 0
+  padding-bottom 66%
+  position relative
+  overflow hidden
+  &:hover 
+    .box__image
+      transform scale(1.2)
+      
+.box__name
+  $offset = 0.5em
+  position absolute
+  top $offset
+  right $offset
+  padding 0.1em
+  z-index 10
+  background-color #fff
   
 .box__image
-  margin 0
+  transition all 0.3s ease-in-out
+  background-size cover
+  background-position center
+  height 100%
+  width 100%
+  position absolute
+  top 0
+  left 0
 .box img 
   max-width 100%
