--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,11 @@ h1 {
 .card label:after {
   content: "\00a0";
 }
+
+.card label:hover:before,
+.card label:hover:after {
+  text-decoration: line-through;
+}
 .card input[type="checkbox"]:not(:checked) + label {
   display: inline-block;
   text-decoration: line-through;
