--- a/styles/reset.css
+++ b/styles/reset.css
@@ -2,6 +2,11 @@ html {
   box-sizing: border-box;
   quotes: "„" "”" "‚" "’";
 }
+
+body {
+  font-family: Helvetica Neue, Helvetica, sans-serif;
+  color: #000;
+}
 *, *:before, *:after {
   box-sizing: inherit;
   margin: 0;
@@ -14,7 +19,7 @@ a {
 }
 
 a:hover {
-  /*text-decoration: underline;*/
+  text-decoration: underline;
 }
 
 li {
